apps/immich/base/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-nodeport
  namespace: apps
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  ports:
    - port: 2283
      targetPort: 2283
      nodePort: 30283
      protocol: TCP
